[project]
name = "clip"
version = "0.1.0"
description = "Video Q&A with LLMs."
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "chromadb-client",
    "langchain",
    "langchain-google-genai",
    "langgraph",
    "langchain_community",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
